--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,10 +50,11 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "ethers": "^6.13.5",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
